Remove the bold format in the author chunk

--- a/_extensions/aagi/pdf-report/template.tex
+++ b/_extensions/aagi/pdf-report/template.tex
@@ -141,10 +141,10 @@ $pandoc.tex()$
 			\vspace{2mm}
 			
 			\normalsize
-			\textbf{$for(author)$
-					$author$
-					$sep$ \\[8mm]
-					$endfor$}\\[8mm]
+			$for(author)$
+			$author$
+			$sep$ \\[8mm]
+			$endfor$\\[8mm]
 
     		\today
   \end{FlushRight}
