--- a/docs/demos/template-docx-short-report.qmd
+++ b/docs/demos/template-docx-short-report.qmd
@@ -10,9 +10,8 @@ params:
 bibliography: references.bib
 date: last-modified
 version-number: 1.0.0
-format: 
-  docx:
-    reference-doc: docx-short-report\template.docx
+format: aagi-docx+short+report
+
 ---
 
 ```{r setup}
