Add in partner info and the two prepared clause

--- a/docs/demos/template-docx-short-report.qmd
+++ b/docs/demos/template-docx-short-report.qmd
@@ -79,8 +79,8 @@ if(params$uni == "CU"){
 
 ---
 author:
-  - "`r params$pri_bio`"
-  - Author 2
+  - "Prepared for: `r params$partner` (`r params$partner_email`)"
+  - "Prepared by: `r params$pri_bio`, Author 2"
   - "Project Lead: `r project_lead`"
   - "email: `r email`"
 subject: "`r email`"
