--- a/docs/demos/template-docx-short-report.qmd
+++ b/docs/demos/template-docx-short-report.qmd
@@ -7,6 +7,8 @@ params:
   uni: CU
   pri_bio: Your.Name
   project-number: ABC1234-567XYZ
+  partner: collab_partner
+  partner_email: collab_partner@email.com.au
 bibliography: references.bib
 date: last-modified
 version-number: 1.0.0
