--- a/docs/demos/template-docx-short-report.qmd
+++ b/docs/demos/template-docx-short-report.qmd
@@ -114,7 +114,7 @@ Example R code, using the [{AAGIThemes}](https://aagi-aus.github.io/AAGIThemes/)
 #| label: fig-example1
 #| fig-cap: "Here is a plot."
 #| fig-height: 3
-plot(pressure)
+plot_aagi(pressure)
 ```
 
 ### This is a subsubsection heading
