Try changing the width of footer to line width

--- a/_extensions/aagi/pdf-report/template.tex
+++ b/_extensions/aagi/pdf-report/template.tex
@@ -88,7 +88,7 @@ includefoot]{geometry}
 \usepackage[automark]{scrlayer-scrpage}
 \clearpairofpagestyles
 \ohead{\includegraphics[width=3.54cm, height=1.85cm]{aagi_logo.pdf}}
-\cfoot{\includegraphics{Partners.pdf}\\
+\cfoot{\includegraphics[width=\linewidth]{Partners.pdf}\\
 	\begin{FlushRight}
 		\textbf{\pagemark} \textbf{|} \textcolor{pagenum}{Page}
 	\end{FlushRight}
