--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -28,13 +28,11 @@ For each format, there is a template file available.
 
 ### Presentation Formats
 
-- **AAGI RevealJS Presentation:** [AAGI RevealJS Slide Demo](demos/template-revealjs.qmd) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-revealjs.qmd))
 - **AAGI PowerPoint Presentation:** [AAGI PPT Slide Demo](demos/template-pptx.pptx) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-pptx.qmd))
+- **AAGI RevealJS Presentation:** [AAGI RevealJS Slide Demo](demos/template-revealjs.qmd) ([Source](https://github.com/AAGI-AUS/AAGIQuarto/blob/main/docs/demos/template-revealjs.qmd)) 
+  - For documentation on using reveal.js slides in Quarto, please see, <https://quarto.org/docs/presentations/revealjs/>.
 
 ## Using
-
-For documentation on using reveal.js slides in Quarto, please see,
-<https://quarto.org/docs/presentations/revealjs/>.
 
 To use the formatted output, save your qmd file into the extension folder that you created using the command above.
 Then, in the output format use:
