add clarity around why AAGIQuarto

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -5,7 +5,10 @@ format:
     toc: false
 ---
 
-The `AAGIQuarto` Quarto theme extension provides official Analytics for the Australian Grains Industry (AAGI) project theming for Quarto documents.
+The `AAGIQuarto` Quarto extension provides official Analytics for the Australian Grains Industry (AAGI) project theming for Quarto documents.
+If you prefer to use R Markdown, please see the excellent [{AAGIThemes}](https://github.com/AAGI-AUS/AAGITemplates) package, which AAGIQuarto has feature parity with and shares the same underlying AAGI templates for the individual AAGI documents so that the outputs should be similiar if not identical between these two tools.
+AAGIQuarto was developed to provide next-generation literate programming tools for AAGI's reporting and presentation needs that support R, Python and Julia languages.
+
 
 ## Installing
 
