update with COPYRIGHT statements about logos

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -65,6 +65,11 @@ cd your_quarto_project_folder
 quarto update AAGI-AUS/AAGIQuarto
 ```
 
+## Logos
+
+The logo of this project and the AAGI strategic partners do not come under MIT License.
+AAGI retains full rights to the AGGI logo and the strategic retain full rights to their own logos, respectively.
+
 ## Acknowledgments
 
 Thanks to [@coatless](https://github.com/coatless) for his assistance in setting up this Quarto extension.
