--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -68,7 +68,7 @@ quarto update AAGI-AUS/AAGIQuarto
 ## Logos
 
 The logo of this project and the AAGI strategic partners do not come under MIT License.
-AAGI retains full rights to the AGGI logo and the GRDC and AAGI strategic partners, Curtin University, the University of Queensland and Adelaide University, retain full rights to their own logos, respectively.
+The Analytics for the Australian Grains Industry (AAGI) project retains full rights to the AGGI logo and the Grains Research and Development Corporation (GRDC) and AAGI strategic partners, Curtin University, the University of Queensland and Adelaide University, retain full rights to their own logos, respectively.
 
 ## Acknowledgments
 
