--- a/docs/demos/template-pptx.qmd
+++ b/docs/demos/template-pptx.qmd
@@ -37,8 +37,8 @@ This Quarto extension allows you to create your slides using a theme that follow
 
 ## Bullet point
 
-- Point 1
-- Point 2
+-   Point 1
+-   Point 2
 
 ## Tables
 
@@ -134,6 +134,8 @@ This is a column on the right.
 
 # Thank You
 
+```{=html}
 <!-- Uncomment if you have a bibliography
 ## References
 -->
+```
