adds header and footer to full-length report docx template

--- a/your_references.bib
+++ b/your_references.bib
@@ -1,25 +1,28 @@
 @article{sparks2018nasapower,
-  title={nasapower: a NASA POWER global meteorology, surface solar energy and climatology data client for R},
-  author={Sparks, Adam H},
-  journal={Journal of Open Source Software},
-  volume={3},
-  number={30},
-  pages={1035},
-  year={2018}
+  title = {nasapower: a NASA POWER global meteorology, surface solar energy and
+           climatology data client for R},
+  author = {Sparks, Adam H},
+  journal = {Journal of Open Source Software},
+  volume = {3},
+  number = {30},
+  pages = {1035},
+  year = {2018},
 }
 
 @article{butler2017asreml,
-  title={ASReml-R reference manual version 4},
-  author={Butler, DG and Cullis, BR and Gilmour, AR and Gogel, BJ and Thompson, R},
-  journal={VSN International Ltd, Hemel Hempstead, HP1 1ES, UK},
-  year={2017}
+  title = {ASReml-R reference manual version 4},
+  author = {Butler, DG and Cullis, BR and Gilmour, AR and Gogel, BJ and Thompson
+            , R},
+  journal = {VSN International Ltd, Hemel Hempstead, HP1 1ES, UK},
+  year = {2017},
 }
 
 
 @article{brien2020asremlplus,
-  title={asremlPlus: Augments ASReml-R in fitting mixed models and packages generally in exploring prediction differences},
-  author={Brien, C},
-  journal={R package version},
-  pages={4--2},
-  year={2020}
+  title = {asremlPlus: Augments ASReml-R in fitting mixed models and packages
+           generally in exploring prediction differences},
+  author = {Brien, C},
+  journal = {R package version},
+  pages = {4--2},
+  year = {2020},
 }
