--- a/docs/demos/template-revealjs.qmd
+++ b/docs/demos/template-revealjs.qmd
@@ -28,18 +28,18 @@ if (params$affiliat == "CU") {
 #| label: load
 #| message: false
 
-if (!require("pak")) install.packages("pak")
-
-if (!require("AAGIPalettes")) {
-  pak::pkg_install("AAGI-AUS/AAGIPalettes")
+if (!require(AAGIThemes)) {
+install.packages('AAGIThemes',
+                 repos = c('https://aagi-aus.r-universe.dev',
+                           'https://cloud.r-project.org'))
 }
-
-if (!require("AAGIThemes")) {
-  pak::pkg_install("AAGI-AUS/AAGIThemes")
-}
+if (!require(AAGIPalettes)) {
+install.packages('AAGIPalettes',
+                 repos = c('https://aagi-aus.r-universe.dev',
+}                           'https://cloud.r-project.org'))
 
 if (!require("gapminder")) {
-  pak::pkg_install("gapminder")
+  install.packages("gapminder")
 }
 
 library(ggplot2)
