--- a/docs/demos/template-pdf-short-report.qmd
+++ b/docs/demos/template-pdf-short-report.qmd
@@ -52,15 +52,12 @@ library(flextable)
 library(AAGIThemes)
 library(AAGIPalettes)
 library(ggplot2)
-library(flextable)
 
 # set ggplot2 theme
 theme_set(theme_aagi())
 
 # set flextable theme
-set_flextable_defaults(
-  theme_fun = theme_ft_aagi()
-)
+set_flextable_defaults(theme_fun = theme_ft_aagi)
 ```
 
 ```{r}
