try again to fix bugs in R code that prevents quarto from building

--- a/docs/demos/template-docx-report.qmd
+++ b/docs/demos/template-docx-report.qmd
@@ -39,14 +39,14 @@ if (require(formatR)) {
 
 # Integrating with AAGIPalettes, AAGIThemes
 if (!require(AAGIThemes)) {
-install.packages('AAGIThemes',
-                 repos = c('https://aagi-aus.r-universe.dev',
-                           'https://cloud.r-project.org'))
+install.packages("AAGIThemes",
+                 repos = c("https://aagi-aus.r-universe.dev",
+                           "https://cloud.r-project.org"))
 }
 if (!require(AAGIPalettes)) {
-install.packages('AAGIPalettes',
-                 repos = c('https://aagi-aus.r-universe.dev',
-                           'https://cloud.r-project.org'))
+install.packages("AAGIPalettes",
+                 repos = c("https://aagi-aus.r-universe.dev",
+                           "https://cloud.r-project.org"))
 }
 if (!require(flextable)) {
   install.packages("flextable")
