--- a/docs/demos/template-pdf-report.qmd
+++ b/docs/demos/template-pdf-report.qmd
@@ -80,14 +80,16 @@ email: "`r email`"
 
 
 if (!require(AAGIThemes)) {
-install.packages('AAGIThemes',
-                 repos = c('https://aagi-aus.r-universe.dev',
-                           'https://cloud.r-project.org'))
+install.packages("AAGIThemes",
+                 repos = c("https://aagi-aus.r-universe.dev",
+                           "https://cloud.r-project.org"))
 }
+
 if (!require(AAGIPalettes)) {
-install.packages('AAGIPalettes',
-                 repos = c('https://aagi-aus.r-universe.dev',
-                           'https://cloud.r-project.org'))
+install.packages("AAGIPalettes",
+                 repos = c("https://aagi-aus.r-universe.dev",
+                           "https://cloud.r-project.org"))
+}
 
 library(ggplot2)
 library(AAGIThemes)
