--- a/docs/demos/template-pptx.qmd
+++ b/docs/demos/template-pptx.qmd
@@ -11,14 +11,15 @@ format:
 #| message: false
 
 if (!require(AAGIThemes)) {
-install.packages('AAGIThemes',
-                 repos = c('https://aagi-aus.r-universe.dev',
-                           'https://cloud.r-project.org'))
+  install.packages("AAGIThemes",
+                 repos = c("https://aagi-aus.r-universe.dev",
+                           "https://cloud.r-project.org"))
 }
 if (!require(AAGIPalettes)) {
-install.packages('AAGIPalettes',
-                 repos = c('https://aagi-aus.r-universe.dev',
-}                           'https://cloud.r-project.org'))
+  install.packages("AAGIPalettes",
+                   repos = c("https://aagi-aus.r-universe.dev",
+                             "https://cloud.r-project.org"))
+}
 
 if (!require("gapminder")) {
   install.packages("gapminder")
