--- a/docs/demos/template-revealjs.qmd
+++ b/docs/demos/template-revealjs.qmd
@@ -29,14 +29,14 @@ if (params$affiliat == "CU") {
 #| message: false
 
 if (!require(AAGIThemes)) {
-install.packages('AAGIThemes',
-                 repos = c('https://aagi-aus.r-universe.dev',
-                           'https://cloud.r-project.org'))
+install.packages("AAGIThemes",
+                 repos = c("https://aagi-aus.r-universe.dev",
+                           "https://cloud.r-project.org"))
 }
 if (!require(AAGIPalettes)) {
-install.packages('AAGIPalettes',
-                 repos = c('https://aagi-aus.r-universe.dev',
-}                           'https://cloud.r-project.org'))
+install.packages("AAGIPalettes",
+                 repos = c("https://aagi-aus.r-universe.dev",
+}                           "https://cloud.r-project.org"))
 
 if (!require("gapminder")) {
   install.packages("gapminder")
